--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="" />
   </head>
   <body>
+
+    <div id=map style="height: 100%;"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNLrJhOMz6idD05pzfn5lhA-TAw-mAZCU"></script>
     <script src="./src/index.ts"></script>
-    <h1>Hello world</h1>
   </body>
 </html>
